--- a/styles/global.css
+++ b/styles/global.css
@@ -8,6 +8,9 @@ body {
   width: 1100px;
   margin: 0 auto;
   font-family: Raleway, sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  background-color: #f5f5f5;
 }
 
 h1,
@@ -31,4 +34,8 @@ a {
 
 img {
   width: 100%;
+}
+
+button {
+  padding: 0;
 }
