--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,257 @@
-/* место для вашего кода */
+/* header */
+
+.header {
+  display: flex;
+  margin: 92px 24px 96px;
+  align-items: center;
+  flex-direction: row;
+}
+
+.header__menu-list {
+  display: flex;
+  list-style: circle;
+  gap: 22px;
+  margin-right: 36px;
+  margin-left: 26px;
+}
+
+.header__links-list-item_no-bullit {
+  list-style: none;
+}
+
+.header__logo {
+  width: 148px;
+  height: 105px;
+  margin-right: 184px;
+}
+
+.contacts {
+  display: flex;
+  font-size: 18px;
+  line-height: 24px;
+  text-underline-offset: 5px;
+  justify-content: flex-end;
+  flex-direction: column;
+}
+
+/* main */
+
+.overlay {
+  position: relative;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.overlay::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: 0;
+}
+
+.cover {
+  background-image: url(../images/cover.jpg);
+  margin-bottom: 179px;
+}
+
+.cover__title {
+  position: relative;
+  width: 100%;
+  color: #fff;
+  font-family: 'Raleway', serif;
+  font-weight: bold;
+  font-size: 100px;
+  line-height: 115%;
+  text-transform: uppercase;
+  padding: 165px 50px 0;
+  margin-bottom: 135px;
+}
+
+.accent-span {
+  display: block;
+}
+
+.span-03 {
+  letter-spacing: 0.3em;
+}
+
+.span-06 {
+  letter-spacing: 0.6em;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.text-right {
+  text-align: right;
+}
+
+.cover-text {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 50px 62px 78px;
+  gap: 79px;
+}
+
+.subline {
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 22px;
+  line-height: 28px;
+}
+
+.cover-button {
+  font-size: 22px;
+  position: relative;
+  background: none;
+  color: #fff;
+  text-transform: uppercase;
+  border: 1px solid #fff;
+  width: 256px;
+  height: 51px;
+}
+
+/* Lots */
+
+.lots {
+  margin: 0 24px 146px;
+}
+
+.lots__title {
+  text-transform: uppercase;
+  font-size: 40px;
+  font-weight: bold;
+  margin-bottom: 27px;
+  margin-left: 40px;
+}
+
+.lots__list {
+  display: flex;
+  justify-content: space-around;
+  list-style: none;
+  gap: 25px;
+  margin-bottom: 30px;
+}
+
+.lots__item {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 40px;
+  width: 334px;
+}
+
+.item__title {
+  position: relative;
+  font-size: 22px;
+  font-weight: bold;
+  line-height: 120%;
+  text-decoration: underline;
+  color: #fff;
+  text-transform: uppercase;
+}
+
+.item__text {
+  position: relative;
+  font-size: 20px;
+  line-height: 120%;
+  color: #fff;
+}
+
+.lots__item-1 {
+  background-image: url(../images/card-lot-01.jpg);
+}
+
+.lots__item-2 {
+  background-image: url(../images/card-lot-02.jpg);
+}
+
+.lots__item-3 {
+  background-image: url(../images/card-lot-03.jpg);
+}
+
+.lots__look-more-link {
+  font-size: 20px;
+  margin-left: 40px;
+}
+
+/* About */
+
+.about {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 0 24px 180px;
+  gap: 72px;
+}
+
+.img__container {
+  display: flex;
+  flex-shrink: 0;
+  width: 240px;
+  height: 240px;
+  background-color: #000;
+  border-radius: 50%;
+  margin-top: 35px;
+  margin-left: 47px; 
+}
+.about__img {
+  margin: auto;
+  width: 148px;
+  height: 114px;
+}
+
+.about-column {
+  display: flex;
+  flex-direction: column;
+}
+
+.about__title {
+  font-size: 40px;
+  font-weight: bold;
+  text-transform: uppercase;
+  margin: 136px 0 100px;
+}
+
+br {
+  line-height: 30px;
+}
+
+.about__text {
+  font-size: 20px;
+  line-height: 24px;
+}
+
+/* Footer */
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 50px 88px;
+}
+
+.footer__menu {
+  text-align: center;
+}
+
+.footer__menu-list {
+  list-style: none;
+}
+
+.socials {
+  display: flex;
+  gap: 48px;
+}
+
+.social-img {
+  width: 48px;
+  height: 48px;
+}
