--- a/styles/style.css
+++ b/styles/style.css
@@ -106,6 +106,7 @@
   text-transform: uppercase;
   font-size: 22px;
   line-height: 28px;
+  flex-shrink: 0;
 }
 
 .cover-button {
@@ -191,6 +192,10 @@
   justify-content: space-between;
   margin: 0 24px 180px;
   gap: 72px;
+}
+
+.about__title-text {
+  font-size: 40px;
 }
 
 .img__container {
