--- a/styles/style.css
+++ b/styles/style.css
@@ -15,6 +15,11 @@
   margin-left: 26px;
 }
 
+.header__menu-item_active {
+  text-decoration: none;
+  cursor: default;
+}
+
 .header__links-list-item_no-bullit {
   list-style: none;
 }
@@ -102,6 +107,7 @@
 }
 
 .subline {
+  font-family: 'Raleway', serif;
   color: #fff;
   text-transform: uppercase;
   font-size: 22px;
@@ -127,6 +133,7 @@
 }
 
 .lots__title {
+  font-family: 'Raleway', serif;
   text-transform: uppercase;
   font-size: 40px;
   font-weight: bold;
@@ -151,6 +158,7 @@
 }
 
 .item__title {
+  font-family: 'Raleway', serif;
   position: relative;
   font-size: 22px;
   font-weight: bold;
@@ -161,6 +169,7 @@
 }
 
 .item__text {
+  font-family: 'Raleway', serif;
   position: relative;
   font-size: 20px;
   line-height: 120%;
@@ -195,6 +204,7 @@
 }
 
 .about__title-text {
+  font-family: 'Raleway', serif;
   font-size: 40px;
 }
 
@@ -221,6 +231,7 @@
 }
 
 .about__title {
+  font-family: 'Raleway', serif;
   font-size: 40px;
   font-weight: bold;
   text-transform: uppercase;
@@ -232,6 +243,7 @@ br {
 }
 
 .about__text {
+  font-family: 'Raleway', serif;
   font-size: 20px;
   line-height: 24px;
 }
@@ -246,6 +258,11 @@ br {
 
 .footer__menu {
   text-align: center;
+}
+
+.footer__menu-item_active {
+  text-decoration: none;
+  cursor: default;
 }
 
 .footer__menu-list {
