--- a/styles/style.css
+++ b/styles/style.css
@@ -10,14 +10,14 @@
 .header__menu-list {
   display: flex;
   list-style: circle;
-  gap: 22px;
-  margin-right: 36px;
+  gap: 33px;
+  margin-right: 42px;
   margin-left: 26px;
+  text-underline-offset: 5px;
 }
 
 .header__menu-item_active {
   text-decoration: none;
-  cursor: default;
 }
 
 .header__links-list-item_no-bullit {
@@ -25,12 +25,13 @@
 }
 
 .header__logo {
-  width: 148px;
+  width: 140px;
   height: 105px;
-  margin-right: 184px;
+  margin-right: 188px;
 }
 
 .contacts {
+  font-style: normal;
   display: flex;
   font-size: 18px;
   line-height: 24px;
@@ -43,16 +44,12 @@
 
 .overlay {
   position: relative;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
 }
 
 .overlay::before {
   content: "";
   position: absolute;
-  top: 0;
-  left: 0;
+  inset: 0;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.6);
@@ -60,41 +57,45 @@
 }
 
 .cover {
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
   background-image: url(../images/cover.jpg);
   margin-bottom: 179px;
+  height: 757px;
 }
 
 .cover__title {
   position: relative;
   width: 100%;
   color: #fff;
-  font-family: 'Raleway', serif;
+  font-family: 'Raleway',  Arial, sans-serif;
   font-weight: bold;
   font-size: 100px;
   line-height: 115%;
   text-transform: uppercase;
   padding: 165px 50px 0;
   margin-bottom: 135px;
+  letter-spacing: 0.3em;
 }
 
 .accent-span {
   display: block;
 }
 
-.span-03 {
-  letter-spacing: 0.3em;
-}
-
-.span-06 {
+.bigger-span {
   letter-spacing: 0.6em;
 }
 
 .text-center {
   text-align: center;
+  margin: 12px 27px 0 0;
 }
 
 .text-right {
   text-align: right;
+  margin-top: 5px;
+  margin-left: 584px;
 }
 
 .cover-text {
@@ -102,23 +103,27 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 50px 62px 78px;
+  margin: 0 50px 46px 78px;
   gap: 79px;
 }
 
 .subline {
-  font-family: 'Raleway', serif;
+  font-family: 'Raleway',  Arial, sans-serif;
   color: #fff;
   text-transform: uppercase;
   font-size: 22px;
   line-height: 28px;
   flex-shrink: 0;
+  word-spacing: 19px;
+  margin-bottom: 10px;
 }
 
 .cover-button {
+  font-family: 'Raleway',  Arial, sans-serif;
   font-size: 22px;
+  font-weight:normal;
   position: relative;
-  background: none;
+  background: transparent;
   color: #fff;
   text-transform: uppercase;
   border: 1px solid #fff;
@@ -133,7 +138,7 @@
 }
 
 .lots__title {
-  font-family: 'Raleway', serif;
+  font-family: 'Raleway',  Arial, sans-serif;
   text-transform: uppercase;
   font-size: 40px;
   font-weight: bold;
@@ -143,6 +148,7 @@
 
 .lots__list {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-around;
   list-style: none;
   gap: 25px;
@@ -153,12 +159,13 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 40px;
+  padding:  0 40px;
   width: 334px;
+  height: 563px;
 }
 
 .item__title {
-  font-family: 'Raleway', serif;
+  font-family: 'Raleway',  Arial, sans-serif;
   position: relative;
   font-size: 22px;
   font-weight: bold;
@@ -166,31 +173,43 @@
   text-decoration: underline;
   color: #fff;
   text-transform: uppercase;
+  margin-top: 51px;
 }
 
 .item__text {
-  font-family: 'Raleway', serif;
+  font-family: 'Raleway',  Arial, sans-serif;
   position: relative;
   font-size: 20px;
   line-height: 120%;
   color: #fff;
+  margin-bottom: 48px;
 }
 
 .lots__item-1 {
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
   background-image: url(../images/card-lot-01.jpg);
 }
 
 .lots__item-2 {
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
   background-image: url(../images/card-lot-02.jpg);
 }
 
 .lots__item-3 {
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
   background-image: url(../images/card-lot-03.jpg);
 }
 
 .lots__look-more-link {
   font-size: 20px;
   margin-left: 40px;
+  text-underline-offset: 3px;
 }
 
 /* About */
@@ -201,11 +220,6 @@
   justify-content: space-between;
   margin: 0 24px 180px;
   gap: 72px;
-}
-
-.about__title-text {
-  font-family: 'Raleway', serif;
-  font-size: 40px;
 }
 
 .img__container {
@@ -231,21 +245,24 @@
 }
 
 .about__title {
-  font-family: 'Raleway', serif;
+  font-family: 'Raleway', sans-serif;
   font-size: 40px;
   font-weight: bold;
   text-transform: uppercase;
   margin: 136px 0 100px;
 }
 
-br {
-  line-height: 30px;
+.about__text {
+  display: flex;
+  flex-direction: column;
+  gap: 28px;
 }
 
-.about__text {
-  font-family: 'Raleway', serif;
+.about__paragraph {
+  font-family: 'Raleway', sans-serif;
   font-size: 20px;
   line-height: 24px;
+  word-spacing: 1px;
 }
 
 /* Footer */
@@ -258,11 +275,11 @@ br {
 
 .footer__menu {
   text-align: center;
+  margin-left: 36px;
 }
 
 .footer__menu-item_active {
   text-decoration: none;
-  cursor: default;
 }
 
 .footer__menu-list {
@@ -272,6 +289,7 @@ br {
 .socials {
   display: flex;
   gap: 48px;
+  list-style: none;
 }
 
 .social-img {
