--- a/styles/style.css
+++ b/styles/style.css
@@ -13,6 +13,7 @@
   gap: 33px;
   margin-right: 42px;
   margin-left: 26px;
+  margin-top: 3px;
   text-underline-offset: 5px;
 }
 
@@ -25,7 +26,7 @@
 }
 
 .header__logo {
-  width: 140px;
+  width: 138px;
   height: 105px;
   margin-right: 188px;
 }
@@ -137,7 +138,7 @@
   margin: 0 24px 146px;
 }
 
-.lots__title {
+.lots__heading {
   font-family: 'Raleway',  Arial, sans-serif;
   text-transform: uppercase;
   font-size: 40px;
@@ -146,7 +147,7 @@
   margin-left: 40px;
 }
 
-.lots__list {
+.lots__card-list {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
@@ -155,7 +156,11 @@
   margin-bottom: 30px;
 }
 
-.lots__item {
+.card-link {
+  text-decoration: none;
+}
+
+.card {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -164,7 +169,7 @@
   height: 563px;
 }
 
-.item__title {
+.card__title {
   font-family: 'Raleway',  Arial, sans-serif;
   position: relative;
   font-size: 22px;
@@ -176,7 +181,7 @@
   margin-top: 51px;
 }
 
-.item__text {
+.card__text {
   font-family: 'Raleway',  Arial, sans-serif;
   position: relative;
   font-size: 20px;
@@ -185,21 +190,21 @@
   margin-bottom: 48px;
 }
 
-.lots__item-1 {
+.card_type_film {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   background-image: url(../images/card-lot-01.jpg);
 }
 
-.lots__item-2 {
+.card_type_book {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   background-image: url(../images/card-lot-02.jpg);
 }
 
-.lots__item-3 {
+.card_type_picture {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
