--- a/styles/style.css
+++ b/styles/style.css
@@ -130,6 +130,8 @@
   border: 1px solid #fff;
   width: 256px;
   height: 51px;
+  bottom: 8px;
+  right: 3px;
 }
 
 /* Lots */
@@ -150,7 +152,38 @@
 .lots__card-list {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  align-items: center;
+  gap: 25px;
+  width: 100%;
+  max-width: 1052px;
+  display: flex;
+  flex-grow: 1;
+  justify-content: center;
+  list-style: none;
+  gap: 25px;
+  margin-bottom: 30px;
+}
+
+.lots__card-list-item {
+  flex-basis: 334px;
+  flex-grow: 1;
+}
+
+.card-link {
+  text-decoration: none;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding:  0 40px;
+  min-height: 563px;
+}
+
+/* .lots__card-list {
+  display: flex;
+  flex-wrap: wrap;
   list-style: none;
   gap: 25px;
   margin-bottom: 30px;
@@ -166,8 +199,8 @@
   justify-content: space-between;
   padding:  0 40px;
   width: 334px;
-  height: 563px;
-}
+  height: 100%;
+} */
 
 .card__title {
   font-family: 'Raleway',  Arial, sans-serif;
@@ -209,7 +242,7 @@
   background-position: center;
   background-repeat: no-repeat;
   background-image: url(../images/card-lot-03.jpg);
-}
+} 
 
 .lots__look-more-link {
   font-size: 20px;
@@ -227,7 +260,7 @@
   gap: 72px;
 }
 
-.img__container {
+.about__logo {
   display: flex;
   flex-shrink: 0;
   width: 240px;
@@ -238,7 +271,7 @@
   margin-left: 47px;
 }
 
-.about__img {
+.about__logo-image {
   margin: auto;
   width: 148px;
   height: 114px;
@@ -260,7 +293,7 @@
 .about__text {
   display: flex;
   flex-direction: column;
-  gap: 28px;
+  gap: 23px;
 }
 
 .about__paragraph {
@@ -268,6 +301,10 @@
   font-size: 20px;
   line-height: 24px;
   word-spacing: 1px;
+}
+
+.about__paragraph_modificator {
+  word-spacing: 0px;
 }
 
 /* Footer */
